# softcover

./: .gitignore  CMakeLists.txt  Makefile
assets/: definitions.soft  music.soft  prefabs.soft  scenes.soft  sfx.soft  sounds.soft  textures.soft
assets/scenes/: scene0.soft  scene1.soft  scene2.soft
scripts/: linux_build  linux_debug_build  linux_debug_run  linux_run  linux_terminal_build  linux_terminal_run
src/app/: CMakeLists.txt  app.c  app_audio.c  app_audio.h  app_common.c  app_common.h  app_control.c  app_control.h  app_entity.c  app_entity.h  app_entry_point.c  app_ephemeral_state.c  app_ephemeral_state.h  app_gfx.c  app_gfx.h  app_memory.c  app_memory.h  app_scene.c  app_scene.h  app_serializable_state.c  app_serializable_state.h  app_thing.h  main.c
src/common/: CMakeLists.txt  common_interface.h  common_structs.c  common_structs.h  softcover_platform.h
